# cocos-awesome-tech-solutions

./: README.en.md  README.md  README_CN.md  README_EN.md  【CocosCreator游戏开发技术方案】第一期.md
demo/Creator3.3.0_2D_spine_changeSlot_with_texture/: README.md  package.json
demo/Creator3.3.1_3D_cartoon_vegetation/: .gitignore  README.md  package-lock.json  package.json
demo/Creator3.3.1_PartialScreenshot/: package.json
demo/Creator3.3.2_2D_Box2DJS_WebAssembly/: README.md  package.json
demo/Creator3.3.2_2D_DrawingBoard/: README.md  package.json
demo/Creator3.3.2_2D_Fluids/: README.md  package.json
demo/Creator3.3.2_2D_GifResourceLoading/: README.md  package.json
demo/Creator3.3.2_2D_Light/: README.md  package.json
demo/Creator3.3.2_2D_ShadowMap/: README.md  package.json
demo/Creator3.3.2_2D_SpriteSplit/: README.md  package.json
demo/Creator3.3.2_3D_Navigation/: README.md  cc.d.ts  package.json  tsconfig.json
demo/Creator3.3.2_MediaPlaybackRate/: .gitignore  README.md  package.json
demo/Creator3.4.0_2D_Box2DJS_WebAssembly/: README.md  package.json
demo/Creator3.4.0_2D_DragonBonesSpecifiedFrame/: README.md
demo/Creator3.4.0_2D_DrawingBoard/: README.md  package.json
demo/Creator3.4.0_2D_Fluids/: README.md  package.json
demo/Creator3.4.0_2D_GifResourceLoading/: package.json
demo/Creator3.4.0_2D_Light/: README.md  package.json
demo/Creator3.4.0_2D_ListViewExtension/: README.md
demo/Creator3.4.0_2D_Mask_Polygon/: README.md
demo/Creator3.4.0_2D_ScreenSwitch/: package.json  readme.md
demo/Creator3.4.0_2D_ShadowMap/: README.md  package.json
demo/Creator3.4.0_2D_SpineSpecifiedFrame/: README.md  package.json
demo/Creator3.4.0_2D_SpriteSplit/: README.md  package.json
demo/Creator3.4.0_2D_spine_changeSlot_with_texture/: README.md  package.json
demo/Creator3.4.0_2D_spine_changeSlot_with_texture/backNative/engine/android/: CMakeLists.txt
demo/Creator3.4.0_3D_MeshCutter/: Readme.md  package.json
demo/Creator3.4.0_3D_Navigation/: README.md  package.json
demo/Creator3.4.0_3D_SkeletalAnimationSpecifiedFrame/: package.json
demo/Creator3.4.0_3D_cartoon_vegetation/: README.md  package.json  tsconfig.json
demo/Creator3.4.2_AgoraMediaPlayer/native/engine/android/: CMakeLists.txt
demo/Creator3.4.2_AgoraMediaPlayer/native/engine/android/app/: AndroidManifest.xml  build.gradle
demo/Creator3.4.2_AgoraMediaPlayer/native/engine/android/app/src/com/cocos/game/: AppActivity.java
demo/Creator3.4.2_AgoraMediaPlayer/native/engine/android/app/src/io/agora/mediaplayer/: PlayerCppFragment.java
demo/Creator3.4.2_AgoraMediaPlayer/native/engine/android/instantapp/: AndroidManifest.xml  build.gradle
demo/Creator3.4.2_AgoraMediaPlayer/native/engine/android/res/values/: strings.xml
shader/: Readme.md
summary/: Cocos 微信小游戏内存优化指南（iOS端）.md  [CocosCreator Game Custom Material Rendering Solutions] Phase I.md  [CocosCreator Game Development Technology Solutions] Phase I.md  [CocosCreator Game Development Technology Solutions] Phase II.md  [CocosCreator Performance Optimisation Solutions] Phase I.md  【CocosCreator 性能优化方案】第一期.md  【CocosCreator 游戏开发技术方案】第一期.md  【CocosCreator 游戏开发技术方案】第二期.md  【CocosCreator 游戏自定义材质渲染方案】第一期.md
(+1925 files in other folders)
